tests/golden/frontend/valid/types_generics.vit
type Id = int
type AliasInt = Id

entry main at core/app {
  let v: AliasInt = 1
  return v
}
